--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
     <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.5, user-scalable=1, shrink-to-fit=no" name="viewport">
     <meta name="description" content="Start your development with a Design System for Bootstrap 4 and Vue.js.">
     <meta name="author" content="Creative Tim, Cristi Jora">
-    <link rel="icon" href="<%= BASE_URL %> favicon.ico" />
+    <link rel="icon" href="favicon.ico" />
 
     <title>Patricio Tambo - Consultores</title>
     <!-- Fonts -->
