--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,7 @@
 
 
 <a
-  href="https://wa.me/593983697453"
+  href="https://api.whatsapp.com/send?phone=593983697453&text=Hola Necesito mas informacion"
   class="whatsapp-float"
   target="_blank"
   title="Chatea con nosotros en WhatsApp"
