--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
     name="viewport">
   <meta name="description" content="Start your development with a Design System for Bootstrap 4 and Vue.js.">
   <meta name="author" content="Creative Tim, Cristi Jora">
-  <link rel="icon" href="<%= BASE_URL %>ptLogo.ico" type="image/x-icon" />
+  <link rel="icon" href="<%= BASE_URL %>logoCasco.ico" type="image/x-icon" />
 
 
   <title>Patricio Tambo - Consultores</title>
